improved FEST test to capture all tabs (image, oifits, parameters, log) to detect regressions